--- a/meson.build
+++ b/meson.build
@@ -5,12 +5,14 @@ project(
   default_options: ['warning_level=3', 'cpp_std=c++20'],
 )
 
+gtkmm_dep = dependency('gtkmm-4.0')
+
 libosmium_html_dep = subproject('osmium-html').get_variable('libosmium_html_dep')
 
 executable(
   'osmium',
   'src/main.cc',
   install: true,
-  dependencies: [libosmium_html_dep],
+  dependencies: [gtkmm_dep, libosmium_html_dep],
   cpp_args: ['-Wall', '-Wextra', '-Wpedantic', '-Wconversion'],
 )
